--- a/01_perceptron.ipynb
+++ b/01_perceptron.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "id": "429f027a-251d-4c88-a272-c2f5a4739636",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa7195c-3c0d-41c3-846a-0f1a5abf2b10",
+   "id": "4c0f2a30-b9c0-438c-b1ae-6404476768d1",
    "metadata": {},
    "source": [
     "## What is perceptron?\n",
@@ -48,32 +48,57 @@
     "퍼셉트론[<sup id=\"fn1-back\">1</sup>](#fn1)이란 인공신경망에서 사용하는 최소 단위라고 보면 편하다. 입력값에 대하여 가중합, 활성화 함수를 통해 출력값을 얻어내는 모델이다.  \n",
     "Eq.\\ref{eqn:eq1}은 가중합을 나타내며, Eq.\\ref{eqn:eq2}는 활성화 함수를 나타내며, 퍼셉트론에서는 활성화함수로 계단함수를 이용한다.\n",
     "\n",
-    "\\begin{equation}\\label{eqn:eq1} g(x) = \\sum_{i} x_iw_i \\qquad (x_0=1, w_0=1) \\end{equation}\n",
-    "\n",
-    "\\begin{equation}\\label{eqn:eq2} h(x) = \\begin{cases} 0, & g(x) \\leq 0 \\\\ 1, & g(x) > 0 \\end{cases} \\end{equation}\n",
-    "\n",
-    "\\begin{equation}\\label{eqn:eq3} \\hat{y} = h(x) \\end{equation}\n",
+    "\\begin{align}\\label{eqn:eq1} g(x) &= \\sum^{n}_{i} x_iw_i + b \\\\[5pt]\n",
+    "\\label{eqn:eq2} h(x) &= \\begin{cases} 0, & g(x) \\leq 0 \\newline 1, & g(x) > 0 \\end{cases} \\\\[5pt]\n",
+    "\\label{eqn:eq3} \\hat{y} &= h(x)\n",
+    "\\end{align}\n",
     "\n",
     "<center>\n",
-    "\t<figure> <img src=\"./images/cnn01_01.png\" alt=\"Perceptron\" id=\"fig1\"/>\n",
+    "\t<figure> <img src=\"./Images/Study/cnn01_01.png\" alt=\"Perceptron\" id=\"fig1\"/>\n",
     "        <figcaption>Fig.1 퍼셉트론</figcaption>\n",
     "    </figure>\n",
     "</center>\n",
     "\n",
-    "Fig.[1](#fig1)의 왼쪽 부분처럼 g(x)가 한개뿐인 경우, 단층 퍼셉트론 (Single layer perceptron) 이라고 하며, 여러개를 조합한 경우 다층 퍼셉트론 (Multilayer perceptron) 이라고 한다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5aee02a6-e894-430e-8818-3d695e8aaf6f",
-   "metadata": {},
-   "source": [
-    "## Perceptron in python"
+    "Fig.[1](#fig1)의 왼쪽 부분처럼 g(x)가 한개뿐인 경우, 단층 퍼셉트론 (Single layer perceptron) 이라고 하며, 여러개를 조합한 경우 다층 퍼셉트론 (Multilayer perceptron, MLP) 이라고 한다.\n",
+    "여기서 $b$는 편향치를 의미하며, 편향치에 따라 식(Eq.\\ref{eqn:eq2})이 아래와 같이 바뀐다.\n",
+    "\n",
+    "\\begin{equation}\\label{eqn:eq4} h(x) = \\begin{cases} 0, & g(x) \\leq b \\newline 1, & g(x) > b \\end{cases} \\end{equation}\n",
+    "\n",
+    "위에 나열했던 수식들을 행렬식으로 바꾸어 표현하는것이 일반적이다(Eq.\\ref{eqn:eq5}, \\ref{eqn:eq6}).\n",
+    "\n",
+    "\\begin{equation}\\label{eqn:eq5} W = \\left( \\begin{matrix}  w_1 & w_2 \\end{matrix} \\right) = \\left( \\begin{matrix}  w_{11} & w_{12} \\newline w_{21} & w_{22} \\end{matrix} \\right), \\enspace\n",
+    "x = \\left( \\begin{matrix}  x_{1} \\newline x_{2} \\end{matrix} \\right), \\enspace\n",
+    "b = \\left( \\begin{matrix}  b_{1} \\newline b_{2} \\end{matrix} \\right) \\end{equation}\n",
+    "\n",
+    "\\begin{equation}\\label{eqn:eq6}\n",
+    "\\begin{split}\n",
+    "g &= W^Tx + b \\\\\\\\[5pt]\n",
+    "    &= \\left( \\begin{matrix}  w_{11} & w_{21} \\newline w_{12} & w_{22} \\end{matrix} \\right) \\left( \\begin{matrix}  x_{1} \\newline x_{2} \\end{matrix} \\right) + \\left( \\begin{matrix}  b_{1} \\newline b_{2} \\end{matrix} \\right)\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "## Example\n",
+    "<center>\n",
+    "\t<figure> <img src=\"./Images/Study/cnn01_02.png\" alt=\"Perceptron\" id=\"fig2\"/>\n",
+    "        <figcaption>Fig.2 다층 퍼셉트론 예제</figcaption>\n",
+    "    </figure>\n",
+    "</center>\n",
+    "\n",
+    "위 Fig.[2](#fig2)와 같은 다층 퍼셉트론의 예를 살펴보자. 퍼셉트론을 행렬식으로 표현하면 아래와 같다.\n",
+    "\n",
+    "\\begin{equation}\\label{eqn:eq7}\n",
+    "\\begin{split}\n",
+    "g &= W^Tx + b \\\\\\\\[5pt]\n",
+    "    &= \\left( \\begin{matrix}  0.7 & 0.3 \\newline 0.2 & 0.4 \\end{matrix} \\right) \\left( \\begin{matrix}  2 \\newline 4 \\end{matrix} \\right) + \\left( \\begin{matrix} -0.3 \\newline 0.1 \\end{matrix} \\right)\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "계산해보면, $g_1=2.3, g_2=2.1$로 계산되어서, $\\hat{y_1}=1, \\hat{y_2}=1$을 얻을 수 있다.  \n",
+    "아래 코드는 python으로 구현한 것인데, $W$의 행렬이 numpy에서 애초에 계산이 편하게끔 들어가 있기 때문에 그대로 `gx = np.dot(W, x) + b`을 사용했다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "id": "173bffd5-1a65-465d-bb09-4b6a6e221336",
    "metadata": {},
    "outputs": [
@@ -81,7 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.11920292 0.98201379]\n"
+      "g = [2.3 2.1]\n",
+      "h = [ True  True]\n"
      ]
     }
    ],
@@ -90,25 +116,25 @@
     "import numpy as np\n",
     "\n",
     "# Input layer\n",
-    "input_data = np.array([[2, 3], [5, 1]])\n",
+    "input_data = np.array([2,4])\n",
     "x = input_data.reshape(-1)\n",
     "\n",
     "# Weight & bias\n",
-    "# Single layer perceptron\n",
-    "w1 = np.array([2, 1, -3, 3])\n",
-    "w2 = np.array([1, -3, 1, 3])\n",
-    "b1 = 3\n",
-    "b2 = 3\n",
+    "w1 = np.array([0.7, 0.3]) # w11, w21\n",
+    "w2 = np.array([0.2, 0.4]) # w12, w22\n",
+    "b1 = -0.3\n",
+    "b2 = 0.1\n",
     "\n",
-    "# Weight sum\n",
+    "# Calculate g(x)\n",
     "W = np.array([w1, w2])\n",
     "b = np.array([b1, b2])\n",
-    "weight_sum = np.dot(W, x) + b\n",
+    "gx = np.dot(W, x) + b\n",
     "\n",
-    "# Output layer\n",
-    "output_data = 1/(1+np.exp(-weight_sum))\n",
+    "# h(x), output layer\n",
+    "hx = gx >= 0 # Step function\n",
     "\n",
-    "print(output_data) # [0.11920292 0.98201379]"
+    "print(\"g =\",gx) # [2.3 2.1]\n",
+    "print(\"h =\", hx) # [True, True] [1, 1]"
    ]
   },
   {
