MLP test case 수정 및 코딩 작업

--- a/02_propagation.ipynb
+++ b/02_propagation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "7a427f32-bf65-4f51-a4ff-91fc7f49f994",
    "metadata": {},
    "outputs": [
@@ -48,39 +48,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g1 = [5.1 2.1]\n",
-      "h1 = [0.9939402  0.89090318]\n"
+      "g1 = [2.6 2. ]\n",
+      "h1 = [0.93086158 0.88079708]\n"
      ]
     }
    ],
    "source": [
-    "# Basic import\n",
     "import numpy as np\n",
     "\n",
     "def sigmoid(x):\n",
     "    return 1 / (1 +np.exp(-x))\n",
     "\n",
     "# Input layer\n",
-    "input_data = np.array([2, 4, 3])\n",
-    "x = input_data.reshape(-1)\n",
+    "x_input = np.array([2, 4])  # x1, x2\n",
+    "y_true = [0.8, 0.4]  # y1. y2: ground truth\n",
+    "x = x_input.reshape(-1)\n",
     "\n",
     "# First layer\n",
-    "w1 = np.array([0.7, 0.3, 0.9]) # w11, w21, w31\n",
-    "w2 = np.array([0.2, 0.4, 0.1]) # w12, w22, w32\n",
-    "b1 = -0.2\n",
+    "w1 = np.array([0.7, 0.3]) # w11, w21\n",
+    "w2 = np.array([0.2, 0.4]) # w12, w22\n",
     "\n",
     "W = np.array([w1, w2])\n",
     "b = np.array([b1, b1])\n",
-    "g1x = np.dot(W, x) + b\n",
+    "g1x = np.dot(W, x)\n",
     "h1x = sigmoid(g1x)\n",
     "\n",
-    "print(\"g1 =\",g1x) # g1 = [3.9 3.6]\n",
-    "print(\"h1 =\", h1x) # h1 = [0.98015969 0.97340301]"
+    "print(\"g1 =\",g1x) # g1 = [2.6 2. ]\n",
+    "print(\"h1 =\", h1x) # h1 = [0.93086158 0.88079708]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "f34860dd-5359-418f-84b6-161df80669f0",
    "metadata": {},
    "outputs": [
@@ -88,8 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g2 = [1.04484561 1.65151343]\n",
-      "h2 = [0.73978389 0.83909549]\n"
+      "g2 = [0.5334847  1.09700809]\n",
+      "h2 = [0.63029549 0.74969909]\n"
      ]
     }
    ],
@@ -98,21 +97,60 @@
     "\n",
     "w3 = np.array([0.1, 0.5]) # w41, w42\n",
     "w4 = np.array([0.8, 0.4]) # w51, w52\n",
-    "b2 = 0.5\n",
     "\n",
     "W_ = np.array([w3, w4])\n",
     "b_ = np.array([b2, b2])\n",
-    "g2x = np.dot(W_, h1x) + b_\n",
+    "g2x = np.dot(W_, h1x)\n",
     "h2x = sigmoid(g2x)\n",
+    "y_predict = h2x  # [y1p, y2p]\n",
     "\n",
-    "print(\"g2 =\",g2x) # g2 = [1.04484561 1.65151343]\n",
-    "print(\"h2 =\", h2x) # h2 = [0.73978389 0.83909549]"
+    "print(\"g2 =\",g2x) # g2 = [0.5334847  1.09700809]\n",
+    "print(\"h2 =\", h2x) # h2 = [0.63029549 0.74969909]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b604dc3d-f7cc-443d-b8f4-9e85d61dcad1",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\\label{eqn:eq1}\n",
+    "\\begin{split}\n",
+    "g_1(x) &=  \\sum^{n}_{i} x_iw_i + b = W_1^Tx \\\\[5pt]\n",
+    "    &= \\left( \\begin{matrix}  w_{11} & w_{21} \\newline w_{12} & w_{22} \\end{matrix} \\right) \\left( \\begin{matrix}  x_{1} \\newline x_{2} \\end{matrix} \\right)\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "이번에는 활성화 함수로 계단함수가 아닌 sigmoid function $\\sigma(x)$를 이용한다.\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\label{eqn:eq2} h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
+    "\\label{eqn:eq3} \\hat{y} &= h(x)\n",
+    "\\end{align}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e8106b8-158b-495c-b052-676ec9e3cf22",
+   "metadata": {},
+   "source": [
+    "최종 계산해보면, $\\hat{y_1}=0.630, \\hat{y_2}=0.750$을 얻을 수 있다. 실제 $y_1=0.8, y_2=0.4$라고 가정했을 때, 퍼셉트론에서 예측한 값과 오차가 발생하게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a87ef1e-411e-41f7-b968-fbd5c2fa254a",
+   "metadata": {},
+   "source": [
+    "## 비용함수 (Cost function)\n",
+    "우리는 퍼셉트론의 순전파/역전파를 이용해서 가중치들을 조정해 줄 것이다. 그리고 이 때 필요한 것이 바로 비용함수와 미분이다."
    ]
   }
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:light"
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
