--- a/02_propagation.ipynb
+++ b/02_propagation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d6938f28-b79c-4294-a7ab-8f31633e17e9",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7a427f32-bf65-4f51-a4ff-91fc7f49f994",
    "metadata": {},
    "outputs": [
@@ -56,8 +56,11 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def sigmoid(x):\n",
-    "    return 1 / (1 +np.exp(-x))\n",
+    "def sigmoid(x, diff=False):\n",
+    "    if diff==True:\n",
+    "        return sigmoid(x)*(1-sigmoid(x));\n",
+    "    else:\n",
+    "        return 1 / (1 +np.exp(-x))\n",
     "\n",
     "# Input layer\n",
     "x_input = np.array([2, 4])  # x1, x2\n",
@@ -69,7 +72,6 @@
     "w2 = np.array([0.2, 0.4]) # w12, w22\n",
     "\n",
     "W = np.array([w1, w2])\n",
-    "b = np.array([b1, b1])\n",
     "g1x = np.dot(W, x)\n",
     "h1x = sigmoid(g1x)\n",
     "\n",
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "f34860dd-5359-418f-84b6-161df80669f0",
    "metadata": {},
    "outputs": [
@@ -99,7 +101,6 @@
     "w4 = np.array([0.8, 0.4]) # w51, w52\n",
     "\n",
     "W_ = np.array([w3, w4])\n",
-    "b_ = np.array([b2, b2])\n",
     "g2x = np.dot(W_, h1x)\n",
     "h2x = sigmoid(g2x)\n",
     "y_predict = h2x  # [y1p, y2p]\n",
@@ -144,12 +145,46 @@
    "metadata": {},
    "source": [
     "## 비용함수 (Cost function)\n",
-    "우리는 퍼셉트론의 순전파/역전파를 이용해서 가중치들을 조정해 줄 것이다. 그리고 이 때 필요한 것이 바로 비용함수와 미분이다."
+    "우리는 퍼셉트론의 순전파/역전파를 이용해서 가중치들을 조정해 줄 것이다. 그리고 이 때 필요한 것이 바로 비용함수와 미분이다.\n",
+    "$\\sigma(x)$의 미분은 $\\sigma(x)(1-\\sigma(x)$)로 나타낼 수 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "af7e8834-7f53-44c3-82fd-221ee79824b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost(y_predict, y_true):\n",
+    "    return (y_true-y_predict)*(y_true-y_predict)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6274481b-171e-47b2-8eae-7933f43c8038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01439981, 0.06114473])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost(y_predict, y_true)"
    ]
   }
  ],
  "metadata": {
   "jupytext": {
+   "encoding": "# -*- coding: utf-8 -*-",
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
