--- a/02_propagation.ipynb
+++ b/02_propagation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d6938f28-b79c-4294-a7ab-8f31633e17e9",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "7a427f32-bf65-4f51-a4ff-91fc7f49f994",
    "metadata": {},
    "outputs": [
@@ -48,8 +48,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g1 = [2.6 2. ]\n",
-      "h1 = [0.93086158 0.88079708]\n"
+      "g = [2.6 2. ]\n",
+      "h = [0.93086158 0.88079708]\n"
      ]
     }
    ],
@@ -72,16 +72,16 @@
     "w2 = np.array([0.2, 0.4]) # w12, w22\n",
     "\n",
     "W = np.array([w1, w2])\n",
-    "g1x = np.dot(W, x)\n",
-    "h1x = sigmoid(g1x)\n",
+    "g = np.dot(W, x)\n",
+    "h = sigmoid(g)\n",
     "\n",
-    "print(\"g1 =\",g1x) # g1 = [2.6 2. ]\n",
-    "print(\"h1 =\", h1x) # h1 = [0.93086158 0.88079708]"
+    "print(\"g =\",g) # g = [2.6 2. ]\n",
+    "print(\"h =\", h) # h = [0.93086158 0.88079708]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f34860dd-5359-418f-84b6-161df80669f0",
    "metadata": {},
    "outputs": [
@@ -89,8 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g2 = [0.5334847  1.09700809]\n",
-      "h2 = [0.63029549 0.74969909]\n"
+      "z = [0.5334847  1.09700809]\n",
+      "y = [0.63029549 0.74969909]\n"
      ]
     }
    ],
@@ -100,13 +100,13 @@
     "w3 = np.array([0.1, 0.5]) # w41, w42\n",
     "w4 = np.array([0.8, 0.4]) # w51, w52\n",
     "\n",
-    "W_ = np.array([w3, w4])\n",
-    "g2x = np.dot(W_, h1x)\n",
-    "h2x = sigmoid(g2x)\n",
-    "y_predict = h2x  # [y1p, y2p]\n",
+    "W_2 = np.array([w3, w4])\n",
+    "z = np.dot(W_2, h)\n",
+    "y = sigmoid(z)\n",
+    "y_predict = y  # [y1p, y2p]\n",
     "\n",
-    "print(\"g2 =\",g2x) # g2 = [0.5334847  1.09700809]\n",
-    "print(\"h2 =\", h2x) # h2 = [0.63029549 0.74969909]"
+    "print(\"z =\", z) # g2 = [0.5334847  1.09700809]\n",
+    "print(\"y =\", y) # h2 = [0.63029549 0.74969909]"
    ]
   },
   {
@@ -126,9 +126,7 @@
     "\\begin{align}\n",
     "\\label{eqn:eq2} h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
     "\\label{eqn:eq3} \\hat{y} &= h(x)\n",
-    "\\end{align}\n",
-    "\n",
-    "\n"
+    "\\end{align}\n"
    ]
   },
   {
@@ -146,39 +144,81 @@
    "source": [
     "## 비용함수 (Cost function)\n",
     "우리는 퍼셉트론의 순전파/역전파를 이용해서 가중치들을 조정해 줄 것이다. 그리고 이 때 필요한 것이 바로 비용함수와 미분이다.\n",
-    "$\\sigma(x)$의 미분은 $\\sigma(x)(1-\\sigma(x)$)로 나타낼 수 "
+    "$\\sigma(x)$의 미분은 $\\sigma(x)(1-\\sigma(x)$)로 나타낼 수 있다. 유도식은 추후 추가.\n",
+    "비용함수는 C는 아래와 같이 정의한다. \n",
+    "\\begin{align}\n",
+    "\\label{eqn:eq2} C &= {1 \\over 2} \\left[ (\\hat{y}_1 - y_1)^2 + (\\hat{y}_2 - y_2)^2\\right]\n",
+    "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "af7e8834-7f53-44c3-82fd-221ee79824b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost(y_predict, y_true):\n",
-    "    return (y_true-y_predict)*(y_true-y_predict)/2"
+    "def cost(y_true, y_predict, length):\n",
+    "    cost = 0\n",
+    "    for n in range(length):\n",
+    "        cost += 1/2*(y_true[n]-y_predict[n])**2\n",
+    "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "6274481b-171e-47b2-8eae-7933f43c8038",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.01439981, 0.06114473])"
+       "0.07554453738003918"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cost(y_predict, y_true)"
+    "cost(y_predict, y_true, len(y_true))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e22ea293-93f8-4ac3-a617-41660b842a81",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\\label{eqn:eq1}\n",
+    "\\begin{split}\n",
+    "z &= W_2^T h, & {dz \\over dW_2}&= h\\\\[5pt]\n",
+    "\\left( \\begin{matrix}  z_{1} \\newline z_{2} \\end{matrix} \\right)  &=  \\left( \\begin{matrix}  w_{31} & w_{41} \\newline w_{32} & w_{42} \\end{matrix} \\right) \\left( \\begin{matrix}  h_{1} \\newline h_{2} \\end{matrix} \\right) \\\\[5pt]\n",
+    "z_1 &= w_{31}h_1 + w_{41}h_2 \\\\[5pt]\n",
+    "z_2 &= w_{32}h_1 + w_{42}h_2 \\\\[5pt]\n",
+    "{dz_1 \\over dw_{31}}&= h_1, \\enspace {dz_1 \\over dw_{41}}= h_2 \\\\[5pt]\n",
+    "{dz_2 \\over dw_{32}}&= h_1, \\enspace {dz_1 \\over dw_{42}}= h_2 \\\\[5pt]\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "이번에는 활성화 함수로 계단함수가 아닌 sigmoid function $\\sigma(x)$를 이용한다.\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\label{eqn:eq2} h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
+    "\\label{eqn:eq3} \\hat{y} &= h(x)\n",
+    "\\end{align}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7816b6d-1ad7-4af2-b853-8757086c46b8",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "[<sup id=\"fn1\">1</sup>](#fn1-back) 선형대수와 통계학으로 배우는 머신러닝 with Python. https://github.com/bjpublic/MachineLearning"
    ]
   }
  ],
