Gradient Descent 함수 구현 시작

--- a/02_propagation.ipynb
+++ b/02_propagation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "d6938f28-b79c-4294-a7ab-8f31633e17e9",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
     "%%javascript\n",
     "MathJax.Hub.Config({\n",
     "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
-    "});\n"
+    "});"
    ]
   },
   {
@@ -210,6 +210,20 @@
     "\\end{align}\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e131b31-e188-40bd-ab0f-f6a5c0f10427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetGradient(x, y, w, learning_rate=0.05, epoch=10000):\n",
+    "    for epochs in range(epoch):\n",
+    "        pred = np.dot(w, x)  # y_pred = w1x1 + w2x2\n",
+    "\n",
+    "    return w, b"
    ]
   },
   {
