--- a/01_perceptron.ipynb
+++ b/01_perceptron.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "429f027a-251d-4c88-a272-c2f5a4739636",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
     "\\end{align}\n",
     "\n",
     "<center>\n",
-    "\t<figure> <img src=\"./cnn01_01.png\" alt=\"Perceptron\" id=\"fig1\"/>\n",
+    "\t<figure> <img src=\"./images/cnn01_01.png\" alt=\"Perceptron\" id=\"fig1\"/>\n",
     "        <figcaption>Fig.1 퍼셉트론</figcaption>\n",
     "    </figure>\n",
     "</center>\n",
@@ -79,7 +79,7 @@
     "\n",
     "## Example\n",
     "<center>\n",
-    "\t<figure> <img src=\"./cnn01_02.png\" alt=\"Perceptron\" id=\"fig2\"/>\n",
+    "\t<figure> <img src=\"./images/cnn01_02.png\" alt=\"Perceptron\" id=\"fig2\"/>\n",
     "        <figcaption>Fig.2 다층 퍼셉트론 예제</figcaption>\n",
     "    </figure>\n",
     "</center>\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "173bffd5-1a65-465d-bb09-4b6a6e221336",
    "metadata": {},
    "outputs": [
