--- a/02_propagation.ipynb
+++ b/02_propagation.ipynb
@@ -12,35 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d6938f28-b79c-4294-a7ab-8f31633e17e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "MathJax.Hub.Config({\n",
-       "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
-       "});\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "MathJax.Hub.Config({\n",
-    "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
-    "});"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "7a427f32-bf65-4f51-a4ff-91fc7f49f994",
    "metadata": {},
    "outputs": [
@@ -78,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f34860dd-5359-418f-84b6-161df80669f0",
    "metadata": {},
    "outputs": [
@@ -108,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b604dc3d-f7cc-443d-b8f4-9e85d61dcad1",
+   "id": "9aba0f01-78a6-4153-9eae-78bcd8ecf77a",
    "metadata": {},
    "source": [
     "\\begin{equation}\\label{eqn:eq1}\n",
@@ -121,38 +93,27 @@
     "이번에는 활성화 함수로 계단함수가 아닌 sigmoid function $\\sigma(x)$를 이용한다.\n",
     "\n",
     "\\begin{align}\n",
-    "\\label{eqn:eq2} h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
-    "\\label{eqn:eq3} \\hat{y} &= h(x)\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e8106b8-158b-495c-b052-676ec9e3cf22",
-   "metadata": {},
-   "source": [
-    "최종 계산해보면, $\\hat{y_1}=0.630, \\hat{y_2}=0.750$을 얻을 수 있다. 실제 $y_1=0.8, y_2=0.4$라고 가정했을 때, 퍼셉트론에서 예측한 값과 오차가 발생하게 된다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5de10ff0-f609-453c-9437-be7c8ac65c90",
-   "metadata": {},
-   "source": [
+    "h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
+    "\\hat{y} &= h(x)\n",
+    "\\end{align}\n",
+    "\n",
+    "최종 계산해보면, $\\hat{y_1}=0.630, \\hat{y_2}=0.750$을 얻을 수 있다. 실제 $y_1=0.8, y_2=0.4$라고 가정했을 때, 퍼셉트론에서 예측한 값과 오차가 발생하게 된다.\n",
+    "\n",
     "## 비용함수 (Cost function)\n",
+    "\n",
     "우리는 퍼셉트론의 순전파/역전파를 이용해서 가중치들을 조정해 줄 것이다. 그리고 이 때 필요한 것이 바로 비용함수와 미분이다.\n",
     "$\\sigma(x)$의 미분은 $\\sigma(x)(1-\\sigma(x)$)로 나타낼 수 있다. 유도식은 추후 추가.\n",
     "비용함수는 C는 아래와 같이 정의한다. \n",
     "\n",
     "\\begin{align}\n",
-    "\\label{eqn:eq1} C &= {1 \\over 2} \\left[(y_1 - t_1)^2 + (y_2 - t_2)^2\\right]  \\\\[5pt]\n",
-    "\\label{eqn:eq2} \\frac{\\partial C}{\\partial t_1} &= y_1-t_1, \\qquad \\frac{\\partial C}{\\partial t_2} = y_2-t_2 \n",
+    "C &= {1 \\over 2} \\left[(y_1 - t_1)^2 + (y_2 - t_2)^2\\right]  \\\\[5pt]\n",
+    "\\frac{\\partial C}{\\partial t_1} &= y_1-t_1, \\qquad \\frac{\\partial C}{\\partial t_2} = y_2-t_2 \n",
     "\\end{align}\n",
     "\n",
-    "\\begin{equation}\\label{eqn:eq3}\n",
+    "\\begin{equation}\n",
     "\\begin{split}\n",
     "z &= W_2^T h, & {dz \\over dW_2}&= h\\\\[5pt]\n",
-    "\\left( \\begin{matrix}  z_{1} \\newline z_{2} \\end{matrix} \\right)  &=  \\left( \\begin{matrix}  w_{31} & w_{41} \\newline w_{32} & w_{42} \\end{matrix} \\right) \\left( \\begin{matrix}  h_{1} \\newline h_{2} \\end{matrix} \\right) \\\\[5pt]\n",
+    "\\left( \\begin{matrix}  z_{1} \\newline z_{2} \\end{matrix} \\right)  &=  \\left( \\begin{matrix} w_{31} & w_{41} \\newline w_{32} & w_{42} \\end{matrix} \\right) \\left( \\begin{matrix}  h_{1} \\newline h_{2} \\end{matrix} \\right) \\\\[5pt]\n",
     "z_1 &= w_{31}h_1 + w_{41}h_2 \\\\[5pt]\n",
     "z_2 &= w_{32}h_1 + w_{42}h_2 \\\\[5pt]\n",
     "{dz_1 \\over dw_{31}}&= h_1, \\enspace {dz_1 \\over dw_{41}}= h_2 \\\\[5pt]\n",
@@ -163,11 +124,9 @@
     "이번에는 활성화 함수로 계단함수가 아닌 sigmoid function $\\sigma(x)$를 이용한다.\n",
     "\n",
     "\\begin{align}\n",
-    "\\label{eqn:eq4} h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
-    "\\label{eqn:eq5} \\hat{y} &= h(x)\n",
-    "\\end{align}\n",
-    "\n",
-    "\n"
+    "h(x) &= \\sigma(x) = {1 \\over 1 + e^{-x}} \\\\[5pt]\n",
+    "\\hat{y} &= h(x)\n",
+    "\\end{align}\n"
    ]
   },
   {
